--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,14 @@
   -webkit-overflow-scrolling: touch;
 }
 
+.hide-native-scrollbar {
+  scrollbar-width: none; /* Firefox 64 */
+  -ms-overflow-style: none; /* Internet Explorer 11 */
+}
+.hide-native-scrollbar::-webkit-scrollbar { /** WebKit */
+  display: none;
+}
+
 ::-webkit-scrollbar {
   overflow: scroll;
   width: 10px;
@@ -478,14 +486,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   }
 }
 
-/* .vid{
+.vid{
   z-index: -222;
   position: fixed;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-} */
+}
 .banner .tagline {
   font-weight: 700;
   letter-spacing: 0.8px;
