--- a/src/App.css
+++ b/src/App.css
@@ -921,6 +921,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   right: 0%;
 }
 
+@media screen and (max-width: 767px) {
+  .client_carousel-slider .react-multiple-carousel__arrow--left 
+   , .client_carousel-slider .react-multiple-carousel__arrow--right {
+    display: none;
+  }
+}
+  
+
 .client_carousel-slider .react-multi-carousel-dot--active button {
   background: #fff;
 }
@@ -1502,70 +1510,6 @@ svg {
   background-repeat: no-repeat; */
 }
 
-
-/* .newsletter-bx {
-  background: #FFFFFF;
-  border-radius: 55px;
-  color: #121212;
-  padding: 85px 125px;
-  margin-bottom: 80px;
-  margin-top: -122px;
-} */
-/* .newsletter-bx h3 {
-  font-weight: 700;
-  letter-spacing: 0.5px;
-  line-height: 1.2em;
-}
-.new-email-bx {
-  background: #fff;
-  padding: 5px;
-  border-radius: 20px;
-  position: relative;
-  z-index: 0;
-  display: flex;
-  align-items: center;
-}
-.new-email-bx::before {
-  content: "";
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  border-radius: 20px;
-  position: absolute;
-  z-index: -1;
-  top: -1px;
-  left: -1px;
-  bottom: -1px;
-  right: -1px;
-}
-.new-email-bx::after {
-  content: "";
-  background: #fff;
-  border-radius: 20px;
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-}
-.new-email-bx input {
-  width: 100%;
-  color: #121212;
-  font-weight: 500;
-  background: transparent;
-  border: 0;
-  padding: 0 15px;
-}
-.new-email-bx button {
-  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  padding: 20px 65px;
-  color: #fff;
-  font-weight: 500;
-  letter-spacing: 0.5px;
-  border-radius: 18px;
-} */
-/* .footer img {
-  width: 26%;
-} */
 .footer .footer-logo {
   width: 15%;
   /* text-align: center; */
@@ -1599,6 +1543,8 @@ svg {
 @media screen and (max-width: 600px) {
   .footer {
     display: flex;
+    margin-top: 8rem;
+
   }
 
   .footer .container {
